--- a/frontend/src/components/Calendar.css
+++ b/frontend/src/components/Calendar.css
@@ -10,13 +10,12 @@ body {
 /* Container */
 .container {
     display: flex;
-    padding: 20px;
+    padding: 15px;
     flex-direction: column;
     border-radius: 10px;
     background-color: #fafeff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height:82%;
-    margin: 40px 20px 20px;
+    margin: 35px 10px 10px;
 }
 
 /* Toolbar */
@@ -114,11 +113,10 @@ body {
 /* Calendar */
 .calendar_default_main > div{
     overflow: scroll;
-    height: 100vh; 
 }
 
 .calendar_default_main{
-    height: 80% !important;
+    height: 90% !important;
     background: rgb(255, 255, 255);
     border: 0px solid rgb(192, 192, 192);
     border-radius: 5px;
